Selenium tests for patients

--- a/inno-Doctor/content/templates/layouts/default/_navbar.html
+++ b/inno-Doctor/content/templates/layouts/default/_navbar.html
@@ -20,7 +20,7 @@
           <li class="nav-item ms-lg-auto">
             <a class="nav-link nav-link-icon me-2" href="{% url 'patient_records:patient_check' %}">
               <i class="fas fa-stethoscope" aria-hidden="true"></i>
-              <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="" data-bs-original-title="Modify Patient Record">Check Patient</p>
+              <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="" data-bs-original-title="Modify Patient Record" id="check_patient" name="ck_patient">Check Patient</p>
             </a>
           </li>
 
