--- a/inno-Doctor/content/templates/layouts/default/_footer.html
+++ b/inno-Doctor/content/templates/layouts/default/_footer.html
@@ -7,7 +7,7 @@
         <div class="col-md-3 mb-4 ms-auto">
           <div>
             <a href="#">
-              <img src="{% static 'img/logo-ct-dark.png' %}" class="mb-3 footer-logo" alt="main_logo">
+              <img src="{% static 'img/navlogo.png' %}" class="mb-3 footer-logo" alt="main_logo">
             </a>
             <h6 class="font-weight-bolder mb-4">InnoDoctor</h6>
           </div>
