--- a/inno-Doctor/patient_records/templates/patient_records/patient-problem-list.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient-problem-list.html
@@ -31,7 +31,7 @@
         {% render_field form.diagnostic_certainty class="form-control"%}
     </div>
     <div class="text-center">
-        <button type="submit" value="save" class="btn bg-gradient-info w-100 my-4 mb-2 mx-1">Add</button>
+        <button type="submit" value="save" class="btn bg-gradient-info w-100 my-4 mb-2 mx-1" id="addproblem">Add</button>
     </div>
 </form>
 
