--- a/inno-Doctor/patient_records/templates/patient_records/patient_record_form.html
+++ b/inno-Doctor/patient_records/templates/patient_records/patient_record_form.html
@@ -15,7 +15,7 @@
         <input id="aadharid" class="form-control" type="number" name="aadharid" maxlength="12" pattern=".{12}" required>
     </div>
     <div class="input-group input-group-outline my-3">
-        <label for="bdate" class="form-label-inline w-30">Enter Aadhar Number:</label>
+        <label for="bdate" class="form-label-inline w-30">Enter Date Of Birth:</label>
         <input id="bdate" class="form-control" type="date" name="bdate" required>
     </div>
     <div class="text-center">
